testfx/errors/error_tests/edge_38_number_errors.fx
// 数字格式错误
x := 10.10.10
y := 1e1e1
z := 0x0x0
a := 123abc
b := .5.5
c := 1_000_000_
